[package]
name = "minhash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "minhash"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.4.1", features = ["vscalar", "vtab-arrow"] }
duckdb-loadable-macros = "0.1.11"
libduckdb-sys = { version = "1.4.1", features = ["loadable-extension"] }
ndarray-rand = "0.15.0"
nohash-hasher = "0.2.0"
rand = "0.8.5"
rustc-hash = "1.1.0"
